presenter profile alignment fix

--- a/Intempio.Meetings.Home/ClientApp/src/css/custom.css
+++ b/Intempio.Meetings.Home/ClientApp/src/css/custom.css
@@ -131,6 +131,7 @@ main .presenters-container .presenter .position {
 }
 
 main .presenters-container {
+    text-align:center;
     display: block !important;
   /*  display: flex !important;*/
 }
